chore: hardening pass — delete RagMemoryMode, wire RagMode session memory, cleanup Delete deprecated RagMemoryMode (thin delegate, zero added value) and remove its registration from ModeController.defaultController(). Wire RagMode to update SessionMemory after successful answers so cross-mode follow-ups have conversation context. Use Java 21 removeFirst() in SessionMemory turn pruning. 802 tests pass (0 failures).